fix menu flicker.

--- a/less/navs.less
+++ b/less/navs.less
@@ -31,6 +31,7 @@
 	}
 	li > ul.sub-menu{
 		display: table;
+		visibility: hidden;
 	}
 	&.dd-theme-light{
 		
